cmake_minimum_required(VERSION 3.21)
project(Ex_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(Ex4_2 Ex4_2.cpp)
add_executable(Ex4_1 Ex4_1.cpp)
add_executable(Ex4_3 Ex4_3.cpp)
add_executable(Ex4_4 Ex4_4.cpp)
add_executable(Ex4_5 Ex4_5.cpp)
add_executable(Ex4_6 Ex4_6.cpp)

