cmake_minimum_required(VERSION 3.21)
project(Ex5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ex5 main.cpp)
add_executable(RunEx1 Ex5_1.cpp)
add_executable(RunEx2 Ex5_2.cpp)
add_executable(RunEx3 Ex5_3.cpp)
add_executable(RunEx4 Ex5_4.cpp)
add_executable(RunEx5 Ex5_5.cpp)
add_executable(RunEx6 Ex5_6.cpp)