cmake_minimum_required(VERSION 3.21)
project(EX6)

set(CMAKE_CXX_STANDARD 14)

add_executable(EX6 main.cpp)
add_executable(RunEX6_1 EX6_1.cpp)
add_executable(RunEX6_2 EX6_2.cpp)
add_executable(RunEX6_3 EX6_3.cpp)
add_executable(RunEX6_4 EX6_4.cpp)
add_executable(RunEX6_5 EX6_5.cpp)
add_executable(RunEX6_6 EX6_6.cpp)
add_executable(run Test.cpp)





